--- a/inicio_style.css
+++ b/inicio_style.css
@@ -123,6 +123,7 @@ ul li:hover ul {
 .img_usuario,
 .img_carrito{
     margin-right: 10px;
+    width: 20px;
 }
 
 #menu_general{
@@ -189,6 +190,81 @@ ul li:hover ul {
     background-color: #CCC2C0;
     border-radius: 20px;
 }
+
+
+.logo_animado{
+    transition: all 1s;
+}
+.logo_animado:hover{
+    width: 25px;
+}
+
+
+.anime{
+    transition: all 1s;
+}
+
+.anime:hover{
+    color: #AA7C7A;
+    font-size: 22px;
+}
+
+.video_animado{
+    animation-name: un_efecto;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in;
+    animation-duration: 5s;
+    animation-delay: 2s;
+
+}
+
+@keyframes un_efecto {
+    0%{}
+    25%{background-color: #AA7C7A;}
+    50%{background-color: #CCC2C0;}
+    75%{ background-color: #AA7C7A;}
+    100%{background-color: #CCC2C0;}
+}
+
+.animacion2{
+    width: 100px;
+    height: 100px;
+    background-color: #AA7C7A;
+    margin-left: 100px;
+}
+
+.animacion2{
+    animation: animacion2 1s linear 3s infinite alternate;
+}
+
+@keyframes animacion2{
+    from{}
+    to{
+        transform: skewY(25deg);
+    }
+}
+
+.aside_animado{
+    margin-top: 30px;
+    font-size: 12px;
+    display: flex;
+    justify-content: center;
+    animation-name: aparecer;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in;
+}
+
+@keyframes aparecer{
+    0%{
+        opacity: 0;
+    }
+
+    100%{
+        opacity: 1;
+    }
+}
+
 
 .pie{
     background-color: rgb(126, 125, 126);
